# StudentManagementSystem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TODO.md  assignment.cc  class.cc  filemanipulation.cc  main.cc  people.cc  student.cc  teacher.cc  tmp.txt
Data/: class.json  students.json  teachers.json
H/: Menu.h  assignment.h  attendanceStatus.h  class.h  dateStruct.h  filemanipulation.h  student.h  teacher.h
MenuFunctions/: ClassMenu.h  StudentMenu.h  TeacherMenu.h
include/: Menu.h  filemanipulation.h
include/ClassDeclarations/: assignment.h  class.h  exam.h  grades.h  people.h  student.h  teacher.h
src/: main.cc
src/ClassDefinitions/: assignment.cc  class.cc  people.cc  student.cc  teacher.cc
src/FileHandling/: filemanipulation.cc
src/MenuFunctions/: AdminMenu.h  ClassMenu.h  StudentMenu.h  TeacherMenu.h
